# gde2-calc

./: AUTHORS  README  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  gde2-calc-cmd.1  gde2-calc.1  gde2-calc.desktop.in  org.gde2.calc.gschema.xml.in
help/: Makefile.am
help/C/: conv-currency.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/lv/: lv.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/te/: te.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
po/: POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_AR.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  he.po  (+56 more)
src/: Makefile.am  currency-manager.c  gde2-calc.c  math-variables.c  math-window.c  mp.c
